src/test/06-Errors/error-array-assign.txt
error-array-assign.ck:1:17: error: cannot assign '@=>' to full array declaration...
[1] [1,2] @=> int a[0];
                    ^
error-array-assign.ck: ...(hint: declare as empty array -- e.g., int a[ ])
